--- a/views/index.html
+++ b/views/index.html
@@ -13,10 +13,10 @@
                 <i class="fa fa-chevron-left" aria-hidden="true" data-direction="left"></i>
         </div>
         <div>
-            <h3 id = "currentYear">{{ lastDayOfMonth.getFullYear() }}</h3> 
+            <h3 id = "currentYear">{{ dateDto.getYear() }}</h3> 
         </div>
         <div>
-            <h3 id = "currentMonth">{{ lastDayOfMonth.getMonth()+1 }}</h3>
+            <h3 id = "currentMonth">{{ dateDto.getMonth() }}</h3>
         </div>
         <div class="month-api">
       
@@ -50,7 +50,7 @@
             </div>
         {% endfor %}
             <div class="week">
-                {% for i in range(29,lastDayOfMonth.getDate()+1,1) %}
+                {% for i in range(29,dateDto.lastDayOfMonth+1,1) %}
                     <div class="day">
                             <p class="dayTxt"><strong>{{ i }}</strong></p>
                             <div>
