--- a/views/index.html
+++ b/views/index.html
@@ -11,9 +11,10 @@ integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxV
 {% endblock %}
 {% block body %}
 <div>
-    <ul class="position-fixed d-flex" class="right:0%;">
-        <li>login</i1>
-        <li>registration</li>
+    <ul class="position-fixed d-flex " style="left:70%">
+        <a href="/login"><li>login</i1></a>
+        <a href="/user"><li style="margin-left: 6px;">registration</li></a>
+  
     </ul>
 </div>
 <div class="calenderWrapper">
