--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@ integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxV
     <h2 style="text-decoration: underline;">Simple scheduler</h2>
     <div class="dateTxt">
         <div class="month-api">
-                <i class="fa fa-chevron-left" aria-hidden="true" data-direction="left"></i>
+                <i class="fa fa-chevron-left" aria-hidden="true" data-direction="LEFT"></i>
         </div>
         <div>
             <h3 id = "currentYear">{{ dateDto.getYear() }}</h3> 
@@ -33,7 +33,7 @@ integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxV
         <div class="month-api">
       
                 <i class="fa fa-chevron-right" aria-hidden="true"
-                data-direction="right"></i>
+                data-direction="RIGHT"></i>
                  
         </div>
     </div>
