--- a/views/registration.html
+++ b/views/registration.html
@@ -2,76 +2,79 @@
 {% block head %}
 
 <title>Registration</title>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<link rel="stylesheet" href="/css/register.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
 </script>
 
 {% endblock %}
 
 {% block body %}
-  <form method="POST" action="/user"
-  class="gy-2 gx-3 w-25 position-fixed" style="top: 50%; left:50% ; transform: translate(-50%,-50%); box-shadow: 5px 5px 5px #ccc; padding:50px 50px">
+<form method="POST" action="/user" id="registrationForm" class="gy-2 gx-3 w-50 position-fixed">
   <h3>Registration</h3>
-      <div class="form-row align-items-center d-flex w-100">
-        <div class="col-sm-3 my-1 w-50">
-          <label class="sr-only" for="emailId">Email Id</label>
-          <input type="text" class="form-control" id="emailId" placeholder="email id" name="emailId">
+  <div class="form-row align-items-center d-flex w-100">
+    <div class="col-sm-3 my-1 w-25">
+      <label class="sr-only" for="emailId">Email Id*</label>
+      <input type="text" class="form-control" id="emailId" placeholder="email id" name="emailId" required>
+    </div>
+    <div class="col-sm-3 my-1 w-25">
+      <label class="sr-only" for="email">email*</label>
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <div class="input-group-text">@</div>
         </div>
-        <div class="col-sm-3 my-1 w-50">
-          <label class="sr-only" for="email">email</label>
-          <div class="input-group">
-            <div class="input-group-prepend">
-              <div class="input-group-text">@</div>
-            </div>
-            <input type="text" class="form-control" id="email" placeholder="email" name="email">
-          </div>
-        </div>
+        <input type="text" class="form-control" id="email" placeholder="email" name="email" required>
       </div>
-      <div>
-        
-      </div>
-        <div class="col-auto mt-2">
-            <label for="name">name</label>
-            <input type="text" class="form-control" id="name" name="name">
-        </div>
-        <div class="form-group mt-2">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" name="password">
-        </div>
-        <div class="form-group mt-2">
-          <label for="rePassword">Re-Password</label>
-          <input type="password" class="form-control" id="rePassword" placeholder="재입력">
-        </div>
-        <div class="mt-3">
-          <h6>생년월일</h6>
-        </div>
-        <div class="d-flex">
-          <select class="form-select" aria-label="Default select example" name="year">
-            <option selected value="null">Year</option>
-          {% for i in range(1950,2030,1) %}
-              <option value="{{i}}">{{i}}</option>
-          {% endfor %}
-          </select>
-          <select class="form-select" aria-label="Default select example" name="month">
-            <option selected value="null">Month</option>
-            {% for i in range(1,13,1) %}
-            <option value="{{i}}">{{i}}</option>
-        {% endfor %}
-          </select>
-          <select class="form-select" aria-label="Default select example" name="day">
-            <option selected value="null">Day</option>
-            {% for i in range(1,31,1) %}
-            <option value="{{i}}">{{i}}</option>
-        {% endfor %}
-          </select>
-        </div>
-        <div class="col-auto position-relative mt-5">
-            <button type="button" class="btn btn-primary position-absolute" style="left:50%; top:50%; transform:translate(-50%,-50%)" id="submitBtn">Submit</button>
-        </div>
+    </div>
+    <div class="col-sm-3 my-1 w-25 emailCheck">
+      <button id="emailCheckBtn" type="button" class="btn btn-primary position-absolute" id="submitBtn"> 이메일중복확인 </button>
+    </div>
+  </div>
+  <div id="emailValidMsg">
+  </div>
+  <div class="col-auto mt-2">
+    <label for="name">name*</label>
+    <input type="text" class="form-control" id="name" name="name" placeholder="name" required>
+  </div>
+  <div class="form-group mt-2">
+    <label for="password">Password*</label>
+    <input type="password" class="form-control" id="password" placeholder="Password" name="password" required>
+  </div>
+  <div class="form-group mt-2">
+    <label for="rePassword">Re-Password*</label>
+    <input type="password" class="form-control" id="rePassword" placeholder="password재입력" required>
+  </div>
+  <div class="mt-3">
+    <h6>생년월일</h6>
+  </div>
+  <div class="d-flex">
+    <select class="form-select" aria-label="Default select example" name="year">
+      <option selected value="null">Year</option>
+      {% for i in range(1950,2030,1) %}
+      <option value="{{i}}">{{i}}</option>
+      {% endfor %}
+    </select>
+    <select class="form-select" aria-label="Default select example" name="month">
+      <option selected value="null">Month</option>
+      {% for i in range(1,13,1) %}
+      <option value="{{i}}">{{i}}</option>
+      {% endfor %}
+    </select>
+    <select class="form-select" aria-label="Default select example" name="day">
+      <option selected value="null">Day</option>
+      {% for i in range(1,31,1) %}
+      <option value="{{i}}">{{i}}</option>
+      {% endfor %}
+    </select>
+  </div>
+  <div class="col-auto position-relative mt-5">
+    <button type="button" class="btn btn-primary position-absolute" id="submitBtn">Submit</button>
+  </div>
 
-        <script src="/js/register.js"></script>
-{% endblock %}
+  <script src="/js/register.js"></script>
+  {% endblock %}
 
-</html>
+  </html>
