--- a/views/registration.html
+++ b/views/registration.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="col-sm-3 my-1 w-25 emailCheck">
-      <button id="emailCheckBtn" type="button" class="btn btn-primary position-absolute" id="submitBtn"> 이메일중복확인 </button>
+      <button id="emailCheckBtn" type="button" class="btn btn-primary position-absolute" id="submitBtn" data-checked="false"> 이메일중복확인 </button>
     </div>
   </div>
   <div id="emailValidMsg">
@@ -39,9 +39,13 @@
     <label for="name">name*</label>
     <input type="text" class="form-control" id="name" name="name" placeholder="name" required>
   </div>
+  <div id="nameValidMsg">
+  </div>
   <div class="form-group mt-2">
-    <label for="password">Password*</label>
+    <label for="password">Password*( 7글자이상 , 최소 하나의 문자를 포함해야 합니다.)</label>
     <input type="password" class="form-control" id="password" placeholder="Password" name="password" required>
+  </div>
+  <div id="passwordValidMsg">
   </div>
   <div class="form-group mt-2">
     <label for="rePassword">Re-Password*</label>
@@ -69,6 +73,9 @@
       <option value="{{i}}">{{i}}</option>
       {% endfor %}
     </select>
+  </div>
+  <div id="formValidMsg">
+
   </div>
   <div class="col-auto position-relative mt-5">
     <button type="button" class="btn btn-primary position-absolute" id="submitBtn">Submit</button>
