--- a/views/registration.html
+++ b/views/registration.html
@@ -81,7 +81,7 @@
     <button type="button" class="btn btn-primary position-absolute" id="submitBtn">Submit</button>
   </div>
 
-  <script src="/js/register.js"></script>
+  <script type="module" src="/js/registration/bundle_register.js"></script>
   {% endblock %}
 
   </html>
