--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@ integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxV
 {% block body %}
 <div>
     <ul class="position-fixed d-flex " style="left:70%">
-        <a href="/login"><li>login</i1></a>
+        <a href="/auth/login"><li>login</i1></a>
         <a href="/user"><li style="margin-left: 6px;">registration</li></a>
   
     </ul>
