--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -11,4 +11,16 @@ h1, h2, h3, h4, h5, h6 {
 ul, li {
   list-style: none;
 }
+
+.parent {
+  position: relative;
+}
+
+.child {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
 /*# sourceMappingURL=reset.css.map */
