--- a/views/index.html
+++ b/views/index.html
@@ -32,10 +32,10 @@ integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxV
                 <i class="fa fa-chevron-left" aria-hidden="true" data-direction="LEFT"></i>
         </div>
         <div>
-            <h3 id = "currentYear">{{ dateDto.getYear() }}</h3> 
+            <h3 id = "currentYear"></h3> 
         </div>
         <div>
-            <h3 id = "currentMonth">{{ dateDto.getMonth() }}</h3>
+            <h3 id = "currentMonth"></h3>
         </div>
         <div class="month-api">
       
@@ -69,16 +69,6 @@ integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxV
             </div>
         {% endfor %}
             <div class="week">
-                {% for i in range(29,dateDto.lastDayOfMonth+1,1) %}
-                    <div class="day">
-                            <p class="dayTxt"><strong>{{ i }}</strong></p>
-                            <div>
-                                <ul class="todoList">
-                                    <li class="todo"></li>
-                                </ul>
-                            </div>
-                    </div>
-                {% endfor %}
             </div>
     </div>
 <script src="/js/bundle_index.js"></script>
